--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -58,7 +58,7 @@
             <div class="col-md-4 mb-4">
                 <a href="@Url.Action("Nike", "Sanpham")" class="category-card">
                     <div class="card">
-                        <img src="~/HinhanhSP/nike-cat.jpg" class="card-img-top" alt="Nike">
+                        <img src="~/HinhanhSP/nike1.png" class="card-img-top" alt="Nike">
                         <div class="card-body">
                             <h5 class="category-title">Nike</h5>
                         </div>
@@ -68,7 +68,7 @@
             <div class="col-md-4 mb-4">
                 <a href="@Url.Action("Adidas", "Sanpham")" class="category-card">
                     <div class="card">
-                        <img src="~/HinhanhSP/adidas-cat.jpg" class="card-img-top" alt="Adidas">
+                        <img src="~/HinhanhSP/adidas1.png" class="card-img-top" alt="Adidas">
                         <div class="card-body">
                             <h5 class="category-title">Adidas</h5>
                         </div>
@@ -78,7 +78,7 @@
             <div class="col-md-4 mb-4">
                 <a href="@Url.Action("Puma", "Sanpham")" class="category-card">
                     <div class="card">
-                        <img src="~/HinhanhSP/puma-cat.jpg" class="card-img-top" alt="Puma">
+                        <img src="~/HinhanhSP/pumarsx.jpg" class="card-img-top" alt="Puma">
                         <div class="card-body">
                             <h5 class="category-title">Puma</h5>
                         </div>
