update Addidas, Puma and Nike view with return button, also including query to add data into database excluding product pics

--- a/Views/Sanpham/Adidas.cshtml
+++ b/Views/Sanpham/Adidas.cshtml
@@ -102,7 +102,10 @@
         right: 10px;
     }
 </style>
-
+<div class="header">
+    <h3 class="brand-title">LOAFER</h3>
+    <a href="@Url.Action("Index", "Home")" class="btn btn-back">Quay lại trang chủ</a> <!-- Nút quay lại -->
+</div>
 <div class="brand-container">
     <div class="brand-title">ADIDAS</div>
 </div>
@@ -169,5 +172,5 @@
             </div>
         </div>
     }
-    
+
 </div>
