--- a/Scripts/CSS/AboutStyles.css
+++ b/Scripts/CSS/AboutStyles.css
@@ -2,12 +2,17 @@
 
 /* About Section */
 .about-section {
-    background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('/Banner/Salt3.jpg');
+    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('/Banner/Salt.jpg');
     background-size: cover;
-    background-position: center;
-    background-attachment: fixed; /* Fixed background for a parallax effect */
-    padding: 80px 0; /* Increased padding for better spacing */
-    min-height: 100vh;
+    background-position: center 70%;
+    background-color: #333; /* Fallback color */
+    min-height: 100vh; /* Ensure the section takes up the full viewport height */
+    display: flex;
+    align-items: center; /* Center the form vertically */
+    justify-content: center; /* Center the form horizontally */
+    padding: 50px 0;
+    width: 100%;
+    box-sizing: border-box;
     font-family: Arial, sans-serif;
 }
 
