--- a/Views/User/Dangky.cshtml
+++ b/Views/User/Dangky.cshtml
@@ -1,65 +1,67 @@
 ﻿@model VinaShoseShop.Models.Nguoidung
 
 @{
-    ViewBag.Title = "Dangky";
+    ViewBag.Title = "Đăng Ký";
 }
-<h2 style="color: #708090; font-family: Arial, sans-serif; font-size: 25px;">Đăng ký tài khoản VinaSHOESHOP</h2>
 
+@section Styles {
+    <link href="@Url.Content("~/Scripts/CSS/RegisterStyles.css")" rel="stylesheet" type="text/css" />
+}
 
-@using (Html.BeginForm("dangky", "User", FormMethod.Post, new { @class = "form-horizontal" }))
-{
-    @Html.AntiForgeryToken()
+<section class="register-section">
+    <div class="register-container">
+        <h2 class="register-title">Đăng Ký Tài Khoản PXT Shoes Shop</h2>
 
-    <div class="form-horizontal">
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Hoten, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Hoten, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Hoten, "", new { @class = "text-danger" })
+        @using (Html.BeginForm("dangky", "User", FormMethod.Post, new { @class = "register-form" }))
+        {
+            @Html.AntiForgeryToken()
+
+            <div class="form">
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+                <div class="form-group">
+                    <label for="Hoten">Họ và Tên</label>
+                    @Html.EditorFor(model => model.Hoten, new { htmlAttributes = new { @class = "" } })
+                    @Html.ValidationMessageFor(model => model.Hoten, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="form-group">
+                    <label for="Email">Địa Chỉ Email</label>
+                    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "" } })
+                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="form-group">
+                    <label for="Dienthoai">Số Điện Thoại</label>
+                    @Html.EditorFor(model => model.Dienthoai, new { htmlAttributes = new { @class = "" } })
+                    @Html.ValidationMessageFor(model => model.Dienthoai, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="form-group">
+                    <label for="Matkhau">Mật Khẩu</label>
+                    @Html.EditorFor(model => model.Matkhau, new { htmlAttributes = new { type = "password", @class = "" } })
+                    @Html.ValidationMessageFor(model => model.Matkhau, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="form-group">
+                    <label for="Diachi">Địa Chỉ Giao Hàng</label>
+                    @Html.EditorFor(model => model.Diachi, new { htmlAttributes = new { @class = "" } })
+                    @Html.ValidationMessageFor(model => model.Diachi, "", new { @class = "text-danger" })
+                </div>
+
+                <button type="submit" class="submit-button">Đăng Ký</button>
             </div>
-        </div>
+        }
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+        @if (ViewBag.Fail != null)
+        {
+            <div class="text-danger" style="text-align: center; margin-top: 15px;">
+                @ViewBag.Fail
             </div>
-        </div>
+        }
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Dienthoai, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Dienthoai, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Dienthoai, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Matkhau, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Matkhau, new { htmlAttributes = new { type = "Password", @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Matkhau, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.Diachi, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Diachi, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Diachi, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Đăng ký" class="btn btn-default" />
-            </div>
+        <div class="login-link">
+            @Html.ActionLink("Đã có tài khoản? Quay lại đăng nhập", "Dangnhap", "User")
         </div>
     </div>
-}
-@ViewBag.Fail
-<div>
-    @Html.ActionLink("Đã có tài khoản! quay lại đăng nhập", "Dangnhap", "User")
-</div>
+</section>
