Update index UI

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -51,7 +51,7 @@
 </section>
 
 <!-- Category Section -->
-<section class="categories">
+<!--<section class="categories">
     <div class="container">
         <h2 class="section-title">Danh Mục Sản Phẩm</h2>
         <div class="row">
@@ -87,7 +87,7 @@
             </div>
         </div>
     </div>
-</section>
+</section>-->
 
 <!-- Video Section -->
 <section class="video-section">
@@ -96,12 +96,12 @@
         <div class="row">
             <div class="col-md-6 mb-4">
                 <div class="video-wrapper">
-                    <iframe src="https://www.youtube.com/embed/sbv9AwKVKEo" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/Cur3b5NX_nk?si=FKfT5iVXB5tQg09i" allowfullscreen></iframe>
                 </div>
             </div>
             <div class="col-md-6 mb-4">
                 <div class="video-wrapper">
-                    <iframe src="https://www.youtube.com/embed/oOLRZk_YfhQ?si=6hf383wqcjcS_S4-" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/864B4rzoPog?si=IoJ6vIej7SPwE4ss" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
