Quick change banner

--- a/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -71,6 +71,7 @@
                             ·
                             <a href="#">Điều Khoản & Điều Kiện</a>
                         </div>
+                        <a href="~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml">~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml</a>
                     </div>
                 </div>
             </footer>
