thêm trang thanh toán thất bại, đồng thời thay đổi cách cập nhật trạng thái

--- a/Areas/Admin/Views/Donhangs/Index.cshtml
+++ b/Areas/Admin/Views/Donhangs/Index.cshtml
@@ -86,7 +86,7 @@
             <td>
                 @if (item.Tinhtrang == 1)
                 {
-                    <span>Đã đặt hàng,chờ giao hàng</span>
+                    <span>Đã đặt hàng,chờ xác nhận thanh toán</span>
                 }
                 else if (item.Tinhtrang == 2)
                 {
