--- a/Views/GioHang/GioHang.cshtml
+++ b/Views/GioHang/GioHang.cshtml
@@ -52,7 +52,7 @@
             {
                 <input type="submit" value="Đặt hàng COD" class="btn-danger" />
             }
-        <form action="/GioHang/DatHangOnline" method="post">
+        <form action="/GioHang/DatHangVNPay" method="post">
             <input type="submit" value="Đặt hàng Vnpay" class="btn-primary" />
         </form>
            
